Project/p4/y.output
Useless nonterminals

   animation_parameter


Terminals which are not used

   "leftmouse_down"
   "middlemouse_down"
   "rightmouse_down"
   "leftmouse_up"
   "middlemouse_up"
   "rightmouse_up"
   "mouse_move"
   "mouse_drag"
   "error"


Useless rules

  122 animation_parameter: object_type "identifier"


State 128 conflicts: 7 shift/reduce
State 138 conflicts: 15 shift/reduce
State 180 conflicts: 7 shift/reduce
State 182 conflicts: 1 shift/reduce
State 191 conflicts: 6 shift/reduce
State 194 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list block_list

    2 declaration_list: declaration_list declaration
    3                 | empty

    4 declaration: variable_declaration ";"
    5            | object_declaration ";"
    6            | forward_declaration ";"

    7 variable_declaration: simple_type "identifier" optional_initializer
    8                     | simple_type "identifier" "[" expression "]"

    9 simple_type: "int"
   10            | "double"
   11            | "string"

   12 optional_initializer: "=" expression
   13                     | empty

   14 object_declaration: object_type "identifier" "(" parameter_list_or_empty ")"
   15                   | object_type "identifier" "[" expression "]"

   16 object_type: "triangle"
   17            | "pixmap"
   18            | "circle"
   19            | "rectangle"
   20            | "textbox"

   21 parameter_list_or_empty: parameter_list
   22                        | empty

   23 parameter_list: parameter_list "," parameter
   24               | parameter

   25 parameter: "identifier" "=" expression

   26 forward_declaration: "forward" "animation" "identifier" "(" check_animation_parameter ")"

   27 block_list: block_list block
   28           | empty

   29 block: initialization_block
   30      | termination_block
   31      | animation_block
   32      | on_block

   33 initialization_block: "initialization" statement_block

   34 termination_block: "termination" statement_block

   35 animation_block: "animation" "identifier" "(" check_animation_parameter ")" "{" statement_list "}" end_of_statement_block

   36 check_animation_parameter: object_type "identifier"

   37 on_block: "on" keystroke statement_block

   38 keystroke: "leftarrow"
   39          | "rightarrow"
   40          | "uparrow"
   41          | "downarrow"
   42          | "space"
   43          | "f1"
   44          | "akey"
   45          | "skey"
   46          | "dkey"
   47          | "fkey"
   48          | "hkey"
   49          | "jkey"
   50          | "kkey"
   51          | "lkey"
   52          | "wkey"
   53          | "zkey"

   54 if_block: statement_block_creator statement end_of_statement_block
   55         | statement_block

   56 statement_block: "{" statement_block_creator statement_list "}" end_of_statement_block

   57 statement_block_creator: /* empty */

   58 end_of_statement_block: /* empty */

   59 statement_list: statement_list statement
   60               | empty

   61 statement: /* empty */
   62          | assign_statement ";"
   63          | if_statement
   64          | for_statement
   65          | print_statement ";"
   66          | exit_statement ";"
   67          | statement_block

   68 if_statement: "if" "(" expression ")" if_block
   69             | "if" "(" expression ")" if_block "else" if_block

   70 for_statement: "for" "(" statement_block_creator assign_statement_or_empty end_of_statement_block ";" expression ";" statement_block_creator assign_statement_or_empty end_of_statement_block ")" statement_block

   71 print_statement: "print" "(" expression ")"

   72 exit_statement: "exit" "(" expression ")"

   73 assign_statement_or_empty: assign_statement
   74                          | empty

   75 assign_statement: variable "=" expression
   76                 | variable "+=" expression
   77                 | variable "-=" expression
   78                 | variable "++"
   79                 | variable "--"

   80 variable: "identifier"
   81         | "identifier" "[" expression "]"
   82         | "identifier" "." "identifier"
   83         | "identifier" "[" expression "]" "." "identifier"

   84 expression: primary_expression
   85           | expression binary_expression expression
   86           | "-" expression
   87           | "!" expression
   88           | math_operator "(" expression ")"
   89           | expression "near" expression
   90           | expression "touches" expression

   91 binary_expression: "||"
   92                  | "&&"
   93                  | "<="
   94                  | ">="
   95                  | "<"
   96                  | ">"
   97                  | "=="
   98                  | "!="
   99                  | "+"
  100                  | "-"
  101                  | "*"
  102                  | "/"
  103                  | "%"

  104 primary_expression: "(" expression ")"
  105                   | variable
  106                   | "int constant"
  107                   | "true"
  108                   | "false"
  109                   | "double constant"
  110                   | "string constant"

  111 math_operator: "sin"
  112              | "cos"
  113              | "tan"
  114              | "asin"
  115              | "acos"
  116              | "atan"
  117              | "sqrt"
  118              | "abs"
  119              | "floor"
  120              | "random"

  121 empty: /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
"int" (258) 9
"double" (259) 10
"string" (260) 11
"triangle" (261) 16
"pixmap" (262) 17
"circle" (263) 18
"rectangle" (264) 19
"textbox" (265) 20
"forward" (266) 26
"initialization" (267) 33
"termination" (268) 34
"on" (269) 37
"animation" (270) 26 35
"if" (271) 68 69
"for" (272) 70
"else" (273) 69
"exit" (274) 72
"print" (275) 71
"true" (276) 107
"false" (277) 108
"space" (278) 42
"leftarrow" (279) 38
"rightarrow" (280) 39
"uparrow" (281) 40
"downarrow" (282) 41
"leftmouse_down" (283)
"middlemouse_down" (284)
"rightmouse_down" (285)
"leftmouse_up" (286)
"middlemouse_up" (287)
"rightmouse_up" (288)
"mouse_move" (289)
"mouse_drag" (290)
"f1" (291) 43
"akey" (292) 44
"skey" (293) 45
"dkey" (294) 46
"fkey" (295) 47
"hkey" (296) 48
"jkey" (297) 49
"kkey" (298) 50
"lkey" (299) 51
"wkey" (300) 52
"zkey" (301) 53
"(" (302) 14 26 35 68 69 70 71 72 88 104
")" (303) 14 26 35 68 69 70 71 72 88 104
"{" (304) 35 56
"}" (305) 35 56
"[" (306) 8 15 81 83
"]" (307) 8 15 81 83
";" (308) 4 5 6 62 65 66 70
"," (309) 23
"." (310) 82 83
"=" (311) 12 25 75
"+=" (312) 76
"-=" (313) 77
"++" (314) 78
"--" (315) 79
"sin" (316) 111
"cos" (317) 112
"tan" (318) 113
"asin" (319) 114
"acos" (320) 115
"atan" (321) 116
"sqrt" (322) 117
"abs" (323) 118
"floor" (324) 119
"random" (325) 120
"touches" (326) 90
"near" (327) 89
"*" (328) 101
"/" (329) 102
"+" (330) 99
"-" (331) 86 100
"%" (332) 103
"<" (333) 95
">" (334) 96
"<=" (335) 93
">=" (336) 94
"==" (337) 97
"!=" (338) 98
"!" (339) 87
"&&" (340) 92
"||" (341) 91
"int constant" (342) 106
"double constant" (343) 109
"string constant" (344) 110
"identifier" (345) 7 8 14 15 25 26 35 36 80 81 82 83
"error" (346)
IF_NO_ELSE (347)
UNARY_OPS (348)


Nonterminals, with rules where they appear

$accept (94)
    on left: 0
program (95)
    on left: 1, on right: 0
declaration_list (96)
    on left: 2 3, on right: 1 2
declaration (97)
    on left: 4 5 6, on right: 2
variable_declaration (98)
    on left: 7 8, on right: 4
simple_type (99)
    on left: 9 10 11, on right: 7 8
optional_initializer (100)
    on left: 12 13, on right: 7
object_declaration (101)
    on left: 14 15, on right: 5
object_type (102)
    on left: 16 17 18 19 20, on right: 14 15 36
parameter_list_or_empty (103)
    on left: 21 22, on right: 14
parameter_list (104)
    on left: 23 24, on right: 21 23
parameter (105)
    on left: 25, on right: 23 24
forward_declaration (106)
    on left: 26, on right: 6
block_list (107)
    on left: 27 28, on right: 1 27
block (108)
    on left: 29 30 31 32, on right: 27
initialization_block (109)
    on left: 33, on right: 29
termination_block (110)
    on left: 34, on right: 30
animation_block (111)
    on left: 35, on right: 31
check_animation_parameter (112)
    on left: 36, on right: 26 35
on_block (113)
    on left: 37, on right: 32
keystroke (114)
    on left: 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53,
    on right: 37
if_block (115)
    on left: 54 55, on right: 68 69
statement_block (116)
    on left: 56, on right: 33 34 37 55 67 70
statement_block_creator (117)
    on left: 57, on right: 54 56 70
end_of_statement_block (118)
    on left: 58, on right: 35 54 56 70
statement_list (119)
    on left: 59 60, on right: 35 56 59
statement (120)
    on left: 61 62 63 64 65 66 67, on right: 54 59
if_statement (121)
    on left: 68 69, on right: 63
for_statement (122)
    on left: 70, on right: 64
print_statement (123)
    on left: 71, on right: 65
exit_statement (124)
    on left: 72, on right: 66
assign_statement_or_empty (125)
    on left: 73 74, on right: 70
assign_statement (126)
    on left: 75 76 77 78 79, on right: 62 73
variable (127)
    on left: 80 81 82 83, on right: 75 76 77 78 79 105
expression (128)
    on left: 84 85 86 87 88 89 90, on right: 8 12 15 25 68 69 70 71
    72 75 76 77 81 83 85 86 87 88 89 90 104
binary_expression (129)
    on left: 91 92 93 94 95 96 97 98 99 100 101 102 103,
    on right: 85
primary_expression (130)
    on left: 104 105 106 107 108 109 110, on right: 84
math_operator (131)
    on left: 111 112 113 114 115 116 117 118 119 120,
    on right: 88
empty (132)
    on left: 121, on right: 3 13 22 28 60 74


state 0

    0 $accept: . program $end

    $default  reduce using rule 121 (empty)

    program           go to state 1
    declaration_list  go to state 2
    empty             go to state 3


state 1

    0 $accept: program . $end

    $end  shift, and go to state 4


state 2

    1 program: declaration_list . block_list
    2 declaration_list: declaration_list . declaration

    "int"        shift, and go to state 5
    "double"     shift, and go to state 6
    "string"     shift, and go to state 7
    "triangle"   shift, and go to state 8
    "pixmap"     shift, and go to state 9
    "circle"     shift, and go to state 10
    "rectangle"  shift, and go to state 11
    "textbox"    shift, and go to state 12
    "forward"    shift, and go to state 13

    $default  reduce using rule 121 (empty)

    declaration           go to state 14
    variable_declaration  go to state 15
    simple_type           go to state 16
    object_declaration    go to state 17
    object_type           go to state 18
    forward_declaration   go to state 19
    block_list            go to state 20
    empty                 go to state 21


state 3

    3 declaration_list: empty .

    $default  reduce using rule 3 (declaration_list)


state 4

    0 $accept: program $end .

    $default  accept


state 5

    9 simple_type: "int" .

    $default  reduce using rule 9 (simple_type)


state 6

   10 simple_type: "double" .

    $default  reduce using rule 10 (simple_type)


state 7

   11 simple_type: "string" .

    $default  reduce using rule 11 (simple_type)


state 8

   16 object_type: "triangle" .

    $default  reduce using rule 16 (object_type)


state 9

   17 object_type: "pixmap" .

    $default  reduce using rule 17 (object_type)


state 10

   18 object_type: "circle" .

    $default  reduce using rule 18 (object_type)


state 11

   19 object_type: "rectangle" .

    $default  reduce using rule 19 (object_type)


state 12

   20 object_type: "textbox" .

    $default  reduce using rule 20 (object_type)


state 13

   26 forward_declaration: "forward" . "animation" "identifier" "(" check_animation_parameter ")"

    "animation"  shift, and go to state 22


state 14

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


state 15

    4 declaration: variable_declaration . ";"

    ";"  shift, and go to state 23


state 16

    7 variable_declaration: simple_type . "identifier" optional_initializer
    8                     | simple_type . "identifier" "[" expression "]"

    "identifier"  shift, and go to state 24


state 17

    5 declaration: object_declaration . ";"

    ";"  shift, and go to state 25


state 18

   14 object_declaration: object_type . "identifier" "(" parameter_list_or_empty ")"
   15                   | object_type . "identifier" "[" expression "]"

    "identifier"  shift, and go to state 26


state 19

    6 declaration: forward_declaration . ";"

    ";"  shift, and go to state 27


state 20

    1 program: declaration_list block_list .
   27 block_list: block_list . block

    "initialization"  shift, and go to state 28
    "termination"     shift, and go to state 29
    "on"              shift, and go to state 30
    "animation"       shift, and go to state 31

    $default  reduce using rule 1 (program)

    block                 go to state 32
    initialization_block  go to state 33
    termination_block     go to state 34
    animation_block       go to state 35
    on_block              go to state 36


state 21

   28 block_list: empty .

    $default  reduce using rule 28 (block_list)


state 22

   26 forward_declaration: "forward" "animation" . "identifier" "(" check_animation_parameter ")"

    "identifier"  shift, and go to state 37


state 23

    4 declaration: variable_declaration ";" .

    $default  reduce using rule 4 (declaration)


state 24

    7 variable_declaration: simple_type "identifier" . optional_initializer
    8                     | simple_type "identifier" . "[" expression "]"

    "["  shift, and go to state 38
    "="  shift, and go to state 39

    $default  reduce using rule 121 (empty)

    optional_initializer  go to state 40
    empty                 go to state 41


state 25

    5 declaration: object_declaration ";" .

    $default  reduce using rule 5 (declaration)


state 26

   14 object_declaration: object_type "identifier" . "(" parameter_list_or_empty ")"
   15                   | object_type "identifier" . "[" expression "]"

    "("  shift, and go to state 42
    "["  shift, and go to state 43


state 27

    6 declaration: forward_declaration ";" .

    $default  reduce using rule 6 (declaration)


state 28

   33 initialization_block: "initialization" . statement_block

    "{"  shift, and go to state 44

    statement_block  go to state 45


state 29

   34 termination_block: "termination" . statement_block

    "{"  shift, and go to state 44

    statement_block  go to state 46


state 30

   37 on_block: "on" . keystroke statement_block

    "space"       shift, and go to state 47
    "leftarrow"   shift, and go to state 48
    "rightarrow"  shift, and go to state 49
    "uparrow"     shift, and go to state 50
    "downarrow"   shift, and go to state 51
    "f1"          shift, and go to state 52
    "akey"        shift, and go to state 53
    "skey"        shift, and go to state 54
    "dkey"        shift, and go to state 55
    "fkey"        shift, and go to state 56
    "hkey"        shift, and go to state 57
    "jkey"        shift, and go to state 58
    "kkey"        shift, and go to state 59
    "lkey"        shift, and go to state 60
    "wkey"        shift, and go to state 61
    "zkey"        shift, and go to state 62

    keystroke  go to state 63


state 31

   35 animation_block: "animation" . "identifier" "(" check_animation_parameter ")" "{" statement_list "}" end_of_statement_block

    "identifier"  shift, and go to state 64


state 32

   27 block_list: block_list block .

    $default  reduce using rule 27 (block_list)


state 33

   29 block: initialization_block .

    $default  reduce using rule 29 (block)


state 34

   30 block: termination_block .

    $default  reduce using rule 30 (block)


state 35

   31 block: animation_block .

    $default  reduce using rule 31 (block)


state 36

   32 block: on_block .

    $default  reduce using rule 32 (block)


state 37

   26 forward_declaration: "forward" "animation" "identifier" . "(" check_animation_parameter ")"

    "("  shift, and go to state 65


state 38

    8 variable_declaration: simple_type "identifier" "[" . expression "]"

    "true"             shift, and go to state 66
    "false"            shift, and go to state 67
    "("                shift, and go to state 68
    "sin"              shift, and go to state 69
    "cos"              shift, and go to state 70
    "tan"              shift, and go to state 71
    "asin"             shift, and go to state 72
    "acos"             shift, and go to state 73
    "atan"             shift, and go to state 74
    "sqrt"             shift, and go to state 75
    "abs"              shift, and go to state 76
    "floor"            shift, and go to state 77
    "random"           shift, and go to state 78
    "-"                shift, and go to state 79
    "!"                shift, and go to state 80
    "int constant"     shift, and go to state 81
    "double constant"  shift, and go to state 82
    "string constant"  shift, and go to state 83
    "identifier"       shift, and go to state 84

    variable            go to state 85
    expression          go to state 86
    primary_expression  go to state 87
    math_operator       go to state 88


state 39

   12 optional_initializer: "=" . expression

    "true"             shift, and go to state 66
    "false"            shift, and go to state 67
    "("                shift, and go to state 68
    "sin"              shift, and go to state 69
    "cos"              shift, and go to state 70
    "tan"              shift, and go to state 71
    "asin"             shift, and go to state 72
    "acos"             shift, and go to state 73
    "atan"             shift, and go to state 74
    "sqrt"             shift, and go to state 75
    "abs"              shift, and go to state 76
    "floor"            shift, and go to state 77
    "random"           shift, and go to state 78
    "-"                shift, and go to state 79
    "!"                shift, and go to state 80
    "int constant"     shift, and go to state 81
    "double constant"  shift, and go to state 82
    "string constant"  shift, and go to state 83
    "identifier"       shift, and go to state 84

    variable            go to state 85
    expression          go to state 89
    primary_expression  go to state 87
    math_operator       go to state 88


state 40

    7 variable_declaration: simple_type "identifier" optional_initializer .

    $default  reduce using rule 7 (variable_declaration)


state 41

   13 optional_initializer: empty .

    $default  reduce using rule 13 (optional_initializer)


state 42

   14 object_declaration: object_type "identifier" "(" . parameter_list_or_empty ")"

    "identifier"  shift, and go to state 90

    $default  reduce using rule 121 (empty)

    parameter_list_or_empty  go to state 91
    parameter_list           go to state 92
    parameter                go to state 93
    empty                    go to state 94


state 43

   15 object_declaration: object_type "identifier" "[" . expression "]"

    "true"             shift, and go to state 66
    "false"            shift, and go to state 67
    "("                shift, and go to state 68
    "sin"              shift, and go to state 69
    "cos"              shift, and go to state 70
    "tan"              shift, and go to state 71
    "asin"             shift, and go to state 72
    "acos"             shift, and go to state 73
    "atan"             shift, and go to state 74
    "sqrt"             shift, and go to state 75
    "abs"              shift, and go to state 76
    "floor"            shift, and go to state 77
    "random"           shift, and go to state 78
    "-"                shift, and go to state 79
    "!"                shift, and go to state 80
    "int constant"     shift, and go to state 81
    "double constant"  shift, and go to state 82
    "string constant"  shift, and go to state 83
    "identifier"       shift, and go to state 84

    variable            go to state 85
    expression          go to state 95
    primary_expression  go to state 87
    math_operator       go to state 88


state 44

   56 statement_block: "{" . statement_block_creator statement_list "}" end_of_statement_block

    $default  reduce using rule 57 (statement_block_creator)

    statement_block_creator  go to state 96


state 45

   33 initialization_block: "initialization" statement_block .

    $default  reduce using rule 33 (initialization_block)


state 46

   34 termination_block: "termination" statement_block .

    $default  reduce using rule 34 (termination_block)


state 47

   42 keystroke: "space" .

    $default  reduce using rule 42 (keystroke)


state 48

   38 keystroke: "leftarrow" .

    $default  reduce using rule 38 (keystroke)


state 49

   39 keystroke: "rightarrow" .

    $default  reduce using rule 39 (keystroke)


state 50

   40 keystroke: "uparrow" .

    $default  reduce using rule 40 (keystroke)


state 51

   41 keystroke: "downarrow" .

    $default  reduce using rule 41 (keystroke)


state 52

   43 keystroke: "f1" .

    $default  reduce using rule 43 (keystroke)


state 53

   44 keystroke: "akey" .

    $default  reduce using rule 44 (keystroke)


state 54

   45 keystroke: "skey" .

    $default  reduce using rule 45 (keystroke)


state 55

   46 keystroke: "dkey" .

    $default  reduce using rule 46 (keystroke)


state 56

   47 keystroke: "fkey" .

    $default  reduce using rule 47 (keystroke)


state 57

   48 keystroke: "hkey" .

    $default  reduce using rule 48 (keystroke)


state 58

   49 keystroke: "jkey" .

    $default  reduce using rule 49 (keystroke)


state 59

   50 keystroke: "kkey" .

    $default  reduce using rule 50 (keystroke)


state 60

   51 keystroke: "lkey" .

    $default  reduce using rule 51 (keystroke)


state 61

   52 keystroke: "wkey" .

    $default  reduce using rule 52 (keystroke)


state 62

   53 keystroke: "zkey" .

    $default  reduce using rule 53 (keystroke)


state 63

   37 on_block: "on" keystroke . statement_block

    "{"  shift, and go to state 44

    statement_block  go to state 97


state 64

   35 animation_block: "animation" "identifier" . "(" check_animation_parameter ")" "{" statement_list "}" end_of_statement_block

    "("  shift, and go to state 98


state 65

   26 forward_declaration: "forward" "animation" "identifier" "(" . check_animation_parameter ")"

    "triangle"   shift, and go to state 8
    "pixmap"     shift, and go to state 9
    "circle"     shift, and go to state 10
    "rectangle"  shift, and go to state 11
    "textbox"    shift, and go to state 12

    object_type                go to state 99
    check_animation_parameter  go to state 100


state 66

  107 primary_expression: "true" .

    $default  reduce using rule 107 (primary_expression)


state 67

  108 primary_expression: "false" .

    $default  reduce using rule 108 (primary_expression)


state 68

  104 primary_expression: "(" . expression ")"

    "true"             shift, and go to state 66
    "false"            shift, and go to state 67
    "("                shift, and go to state 68
    "sin"              shift, and go to state 69
    "cos"              shift, and go to state 70
    "tan"              shift, and go to state 71
    "asin"             shift, and go to state 72
    "acos"             shift, and go to state 73
    "atan"             shift, and go to state 74
    "sqrt"             shift, and go to state 75
    "abs"              shift, and go to state 76
    "floor"            shift, and go to state 77
    "random"           shift, and go to state 78
    "-"                shift, and go to state 79
    "!"                shift, and go to state 80
    "int constant"     shift, and go to state 81
    "double constant"  shift, and go to state 82
    "string constant"  shift, and go to state 83
    "identifier"       shift, and go to state 84

    variable            go to state 85
    expression          go to state 101
    primary_expression  go to state 87
    math_operator       go to state 88


state 69

  111 math_operator: "sin" .

    $default  reduce using rule 111 (math_operator)


state 70

  112 math_operator: "cos" .

    $default  reduce using rule 112 (math_operator)


state 71

  113 math_operator: "tan" .

    $default  reduce using rule 113 (math_operator)


state 72

  114 math_operator: "asin" .

    $default  reduce using rule 114 (math_operator)


state 73

  115 math_operator: "acos" .

    $default  reduce using rule 115 (math_operator)


state 74

  116 math_operator: "atan" .

    $default  reduce using rule 116 (math_operator)


state 75

  117 math_operator: "sqrt" .

    $default  reduce using rule 117 (math_operator)


state 76

  118 math_operator: "abs" .

    $default  reduce using rule 118 (math_operator)


state 77

  119 math_operator: "floor" .

    $default  reduce using rule 119 (math_operator)


state 78

  120 math_operator: "random" .

    $default  reduce using rule 120 (math_operator)


state 79

   86 expression: "-" . expression

    "true"             shift, and go to state 66
    "false"            shift, and go to state 67
    "("                shift, and go to state 68
    "sin"              shift, and go to state 69
    "cos"              shift, and go to state 70
    "tan"              shift, and go to state 71
    "asin"             shift, and go to state 72
    "acos"             shift, and go to state 73
    "atan"             shift, and go to state 74
    "sqrt"             shift, and go to state 75
    "abs"              shift, and go to state 76
    "floor"            shift, and go to state 77
    "random"           shift, and go to state 78
    "-"                shift, and go to state 79
    "!"                shift, and go to state 80
    "int constant"     shift, and go to state 81
    "double constant"  shift, and go to state 82
    "string constant"  shift, and go to state 83
    "identifier"       shift, and go to state 84

    variable            go to state 85
    expression          go to state 102
    primary_expression  go to state 87
    math_operator       go to state 88


state 80

   87 expression: "!" . expression

    "true"             shift, and go to state 66
    "false"            shift, and go to state 67
    "("                shift, and go to state 68
    "sin"              shift, and go to state 69
    "cos"              shift, and go to state 70
    "tan"              shift, and go to state 71
    "asin"             shift, and go to state 72
    "acos"             shift, and go to state 73
    "atan"             shift, and go to state 74
    "sqrt"             shift, and go to state 75
    "abs"              shift, and go to state 76
    "floor"            shift, and go to state 77
    "random"           shift, and go to state 78
    "-"                shift, and go to state 79
    "!"                shift, and go to state 80
    "int constant"     shift, and go to state 81
    "double constant"  shift, and go to state 82
    "string constant"  shift, and go to state 83
    "identifier"       shift, and go to state 84

    variable            go to state 85
    expression          go to state 103
    primary_expression  go to state 87
    math_operator       go to state 88


state 81

  106 primary_expression: "int constant" .

    $default  reduce using rule 106 (primary_expression)


state 82

  109 primary_expression: "double constant" .

    $default  reduce using rule 109 (primary_expression)


state 83

  110 primary_expression: "string constant" .

    $default  reduce using rule 110 (primary_expression)


state 84

   80 variable: "identifier" .
   81         | "identifier" . "[" expression "]"
   82         | "identifier" . "." "identifier"
   83         | "identifier" . "[" expression "]" "." "identifier"

    "["  shift, and go to state 104
    "."  shift, and go to state 105

    $default  reduce using rule 80 (variable)


state 85

  105 primary_expression: variable .

    $default  reduce using rule 105 (primary_expression)


state 86

    8 variable_declaration: simple_type "identifier" "[" expression . "]"
   85 expression: expression . binary_expression expression
   89           | expression . "near" expression
   90           | expression . "touches" expression

    "]"        shift, and go to state 106
    "touches"  shift, and go to state 107
    "near"     shift, and go to state 108
    "*"        shift, and go to state 109
    "/"        shift, and go to state 110
    "+"        shift, and go to state 111
    "-"        shift, and go to state 112
    "%"        shift, and go to state 113
    "<"        shift, and go to state 114
    ">"        shift, and go to state 115
    "<="       shift, and go to state 116
    ">="       shift, and go to state 117
    "=="       shift, and go to state 118
    "!="       shift, and go to state 119
    "&&"       shift, and go to state 120
    "||"       shift, and go to state 121

    binary_expression  go to state 122


state 87

   84 expression: primary_expression .

    $default  reduce using rule 84 (expression)


state 88

   88 expression: math_operator . "(" expression ")"

    "("  shift, and go to state 123


state 89

   12 optional_initializer: "=" expression .
   85 expression: expression . binary_expression expression
   89           | expression . "near" expression
   90           | expression . "touches" expression

    "touches"  shift, and go to state 107
    "near"     shift, and go to state 108
    "*"        shift, and go to state 109
    "/"        shift, and go to state 110
    "+"        shift, and go to state 111
    "-"        shift, and go to state 112
    "%"        shift, and go to state 113
    "<"        shift, and go to state 114
    ">"        shift, and go to state 115
    "<="       shift, and go to state 116
    ">="       shift, and go to state 117
    "=="       shift, and go to state 118
    "!="       shift, and go to state 119
    "&&"       shift, and go to state 120
    "||"       shift, and go to state 121

    $default  reduce using rule 12 (optional_initializer)

    binary_expression  go to state 122


state 90

   25 parameter: "identifier" . "=" expression

    "="  shift, and go to state 124


state 91

   14 object_declaration: object_type "identifier" "(" parameter_list_or_empty . ")"

    ")"  shift, and go to state 125


state 92

   21 parameter_list_or_empty: parameter_list .
   23 parameter_list: parameter_list . "," parameter

    ","  shift, and go to state 126

    $default  reduce using rule 21 (parameter_list_or_empty)


state 93

   24 parameter_list: parameter .

    $default  reduce using rule 24 (parameter_list)


state 94

   22 parameter_list_or_empty: empty .

    $default  reduce using rule 22 (parameter_list_or_empty)


state 95

   15 object_declaration: object_type "identifier" "[" expression . "]"
   85 expression: expression . binary_expression expression
   89           | expression . "near" expression
   90           | expression . "touches" expression

    "]"        shift, and go to state 127
    "touches"  shift, and go to state 107
    "near"     shift, and go to state 108
    "*"        shift, and go to state 109
    "/"        shift, and go to state 110
    "+"        shift, and go to state 111
    "-"        shift, and go to state 112
    "%"        shift, and go to state 113
    "<"        shift, and go to state 114
    ">"        shift, and go to state 115
    "<="       shift, and go to state 116
    ">="       shift, and go to state 117
    "=="       shift, and go to state 118
    "!="       shift, and go to state 119
    "&&"       shift, and go to state 120
    "||"       shift, and go to state 121

    binary_expression  go to state 122


state 96

   56 statement_block: "{" statement_block_creator . statement_list "}" end_of_statement_block

    $default  reduce using rule 121 (empty)

    statement_list  go to state 128
    empty           go to state 129


state 97

   37 on_block: "on" keystroke statement_block .

    $default  reduce using rule 37 (on_block)


state 98

   35 animation_block: "animation" "identifier" "(" . check_animation_parameter ")" "{" statement_list "}" end_of_statement_block

    "triangle"   shift, and go to state 8
    "pixmap"     shift, and go to state 9
    "circle"     shift, and go to state 10
    "rectangle"  shift, and go to state 11
    "textbox"    shift, and go to state 12

    object_type                go to state 99
    check_animation_parameter  go to state 130


state 99

   36 check_animation_parameter: object_type . "identifier"

    "identifier"  shift, and go to state 131


state 100

   26 forward_declaration: "forward" "animation" "identifier" "(" check_animation_parameter . ")"

    ")"  shift, and go to state 132


state 101

   85 expression: expression . binary_expression expression
   89           | expression . "near" expression
   90           | expression . "touches" expression
  104 primary_expression: "(" expression . ")"

    ")"        shift, and go to state 133
    "touches"  shift, and go to state 107
    "near"     shift, and go to state 108
    "*"        shift, and go to state 109
    "/"        shift, and go to state 110
    "+"        shift, and go to state 111
    "-"        shift, and go to state 112
    "%"        shift, and go to state 113
    "<"        shift, and go to state 114
    ">"        shift, and go to state 115
    "<="       shift, and go to state 116
    ">="       shift, and go to state 117
    "=="       shift, and go to state 118
    "!="       shift, and go to state 119
    "&&"       shift, and go to state 120
    "||"       shift, and go to state 121

    binary_expression  go to state 122


state 102

   85 expression: expression . binary_expression expression
   86           | "-" expression .
   89           | expression . "near" expression
   90           | expression . "touches" expression

    $default  reduce using rule 86 (expression)

    binary_expression  go to state 122


state 103

   85 expression: expression . binary_expression expression
   87           | "!" expression .
   89           | expression . "near" expression
   90           | expression . "touches" expression

    $default  reduce using rule 87 (expression)

    binary_expression  go to state 122


state 104

   81 variable: "identifier" "[" . expression "]"
   83         | "identifier" "[" . expression "]" "." "identifier"

    "true"             shift, and go to state 66
    "false"            shift, and go to state 67
    "("                shift, and go to state 68
    "sin"              shift, and go to state 69
    "cos"              shift, and go to state 70
    "tan"              shift, and go to state 71
    "asin"             shift, and go to state 72
    "acos"             shift, and go to state 73
    "atan"             shift, and go to state 74
    "sqrt"             shift, and go to state 75
    "abs"              shift, and go to state 76
    "floor"            shift, and go to state 77
    "random"           shift, and go to state 78
    "-"                shift, and go to state 79
    "!"                shift, and go to state 80
    "int constant"     shift, and go to state 81
    "double constant"  shift, and go to state 82
    "string constant"  shift, and go to state 83
    "identifier"       shift, and go to state 84

    variable            go to state 85
    expression          go to state 134
    primary_expression  go to state 87
    math_operator       go to state 88


state 105

   82 variable: "identifier" "." . "identifier"

    "identifier"  shift, and go to state 135


state 106

    8 variable_declaration: simple_type "identifier" "[" expression "]" .

    $default  reduce using rule 8 (variable_declaration)


state 107

   90 expression: expression "touches" . expression

    "true"             shift, and go to state 66
    "false"            shift, and go to state 67
    "("                shift, and go to state 68
    "sin"              shift, and go to state 69
    "cos"              shift, and go to state 70
    "tan"              shift, and go to state 71
    "asin"             shift, and go to state 72
    "acos"             shift, and go to state 73
    "atan"             shift, and go to state 74
    "sqrt"             shift, and go to state 75
    "abs"              shift, and go to state 76
    "floor"            shift, and go to state 77
    "random"           shift, and go to state 78
    "-"                shift, and go to state 79
    "!"                shift, and go to state 80
    "int constant"     shift, and go to state 81
    "double constant"  shift, and go to state 82
    "string constant"  shift, and go to state 83
    "identifier"       shift, and go to state 84

    variable            go to state 85
    expression          go to state 136
    primary_expression  go to state 87
    math_operator       go to state 88


state 108

   89 expression: expression "near" . expression

    "true"             shift, and go to state 66
    "false"            shift, and go to state 67
    "("                shift, and go to state 68
    "sin"              shift, and go to state 69
    "cos"              shift, and go to state 70
    "tan"              shift, and go to state 71
    "asin"             shift, and go to state 72
    "acos"             shift, and go to state 73
    "atan"             shift, and go to state 74
    "sqrt"             shift, and go to state 75
    "abs"              shift, and go to state 76
    "floor"            shift, and go to state 77
    "random"           shift, and go to state 78
    "-"                shift, and go to state 79
    "!"                shift, and go to state 80
    "int constant"     shift, and go to state 81
    "double constant"  shift, and go to state 82
    "string constant"  shift, and go to state 83
    "identifier"       shift, and go to state 84

    variable            go to state 85
    expression          go to state 137
    primary_expression  go to state 87
    math_operator       go to state 88


state 109

  101 binary_expression: "*" .

    $default  reduce using rule 101 (binary_expression)


state 110

  102 binary_expression: "/" .

    $default  reduce using rule 102 (binary_expression)


state 111

   99 binary_expression: "+" .

    $default  reduce using rule 99 (binary_expression)


state 112

  100 binary_expression: "-" .

    $default  reduce using rule 100 (binary_expression)


state 113

  103 binary_expression: "%" .

    $default  reduce using rule 103 (binary_expression)


state 114

   95 binary_expression: "<" .

    $default  reduce using rule 95 (binary_expression)


state 115

   96 binary_expression: ">" .

    $default  reduce using rule 96 (binary_expression)


state 116

   93 binary_expression: "<=" .

    $default  reduce using rule 93 (binary_expression)


state 117

   94 binary_expression: ">=" .

    $default  reduce using rule 94 (binary_expression)


state 118

   97 binary_expression: "==" .

    $default  reduce using rule 97 (binary_expression)


state 119

   98 binary_expression: "!=" .

    $default  reduce using rule 98 (binary_expression)


state 120

   92 binary_expression: "&&" .

    $default  reduce using rule 92 (binary_expression)


state 121

   91 binary_expression: "||" .

    $default  reduce using rule 91 (binary_expression)


state 122

   85 expression: expression binary_expression . expression
